--- a/src/index.html
+++ b/src/index.html
@@ -2,43 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Jquery add / remove class</title>
+  <title>Catapult vs Trebuchet | Vote</title>
   <link rel="stylesheet" href="./css/style.css">
   <script rel="script" src="./lib/jquery-3.4.1.min.js"></script>
-  <script rel="script" src="./js/main.js"></script>
+  <script rel="script" src="js/main.js"></script>
 </head>
 <body>
-<div id="wave-container">
+<div class="results">
+  <div id="card-1" class="card">
+    <p style="text-align: center; margin-top: 25%;">Catapult</p>
+    <p style="text-align: center; color: white; font-weight: bolder; font-size: 25px;"><b><span id="catapultPercent"></span></b></p>
+  </div>
+  <div id="card-2" class="card">
+    <p style="text-align: center; margin-top: 25%;">Trebuchet</p>
+    <p style="text-align: center; color: white; font-weight: bolder; font-size: 25px;"><b><span id="trebuchetPercent"></span></b></p>
+  </div>
+</div>
 
-  <div id="part1" class="content">
-    <h3>part1</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, velit, voluptates! Autem beatae, consequuntur dolorem ex ipsum itaque labore magnam molestiae nihil
-      obcaecati quaerat quibusdam reiciendis sapiente soluta temporibus vel.
-    </p>
+<hr>
+<div class="ui">
+  <div class="area">
+    <button class="vote-button" id="catapult-button">+1</button>
+    <br>
+    <p>Total votes for Catapult : <span id="catapultTotal"></span></p>
   </div>
-  <div id="part2" class="content">
-    <h3>part2</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa delectus deleniti dolore enim et facere fugit impedit inventore iure minima nihil
-      non odio pariatur quia, quo rem saepe sunt voluptatem.
-    </p>
+  <div class="area">
+    <button class="vote-button" id="trebuchet-button">+1</button>
+    <br>
+    <p>Total votes for Trébuchet : <span id="trebuchetTotal"></span></p>
   </div>
-  <div id="part3" class="content">
-    <h3>part3</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at blanditiis ducimus numquam officiis pariatur porro, quae sequi similique voluptatem.
-      Consequuntur delectus itaque iusto maiores maxime modi nemo, quasi veniam?
-    </p>
-  </div>
-  <div id="part4" class="content">
-    <h3>part4</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti deserunt harum magnam nihil optio quidem quo rem similique?
-      At blanditiis consectetur dolorem eius hic ipsa iste neque nobis odit perferendis!
-    </p>
-  </div>
-
 </div>
 </body>
 </html>
